--- a/src/components/MenuItem/menuItem.scss
+++ b/src/components/MenuItem/menuItem.scss
@@ -1,12 +1,14 @@
 .menu-item {
-  min-width: 30%;
-  height: 240px;
-  flex: 1 1 auto;
+  position: relative;
   display: flex;
-  align-items: center;
+  flex: 1 1 auto;
   justify-content: center;
+  align-items: center;
+  height: 240px;
+  min-width: 30%;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
 
   &.large {
     height: 380px;
@@ -20,18 +22,45 @@
     margin-left: 7.5px;
   }
 
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 3000ms cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .content {
+      opacity: 0.9;
+    }
+  }
+
+  .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+
+    transform: scale(1);
+    transition: transform 3000ms cubic-bezier(0.25, 0.45, 0.45, 0.95);
+  }
+
   .content {
-    height: 90px;
-    padding: 0 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 90px;
+    padding: 0 25px;
     border: 1px solid black;
+    background-color: #fff;
+    opacity: 0.7;
 
     .title {
       font-weight: bold;
       margin-bottom: 6px;
+      margin-top: 0;
       font-size: 22px;
       color: #4a4a4a;
     }
