--- a/src/components/CollectionItem/collectionItem.scss
+++ b/src/components/CollectionItem/collectionItem.scss
@@ -1,7 +1,8 @@
 .collection-item {
-  width: 22%;
+  position: relative;
   display: flex;
   flex-direction: column;
+  width: 22%;
   height: 350px;
   align-items: center;
 
@@ -11,6 +12,24 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+  }
+
+  .custom-button {
+    display: none;
+    position: absolute;
+    top: 255px;
+    width: 80%;
+    opacity: 0.7;
+  }
+  
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      display: flex;
+      opacity: 0.85;
+    }
   }
 
   .collection-footer {
