--- a/src/components/Cart-Item/cart-Item.scss
+++ b/src/components/Cart-Item/cart-Item.scss
@@ -1,7 +1,8 @@
 .cart-item {
   width: 100%;
   display: flex;
-  height: 80px;
+  flex-shrink: 0;
+  height: 70px;
   margin-bottom: 15px;
 
   img {
