Corregido width de CollectionItem

--- a/src/components/CollectionItem/collectionItem.scss
+++ b/src/components/CollectionItem/collectionItem.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 22%;
+  width: 22vw;
   height: 350px;
   align-items: center;
 
