Integrada funcionalidad de pago mediante Stripe
Se agregó funcionalidad para procesamiento de pagos online mediante Stripe en modalidad de prueba (sólo frontend). Se requiere aún crear el backend para completar la funcionalidad de pago, lo cual se realizará más adelante.

--- a/src/pages/Checkout/checkout.scss
+++ b/src/pages/Checkout/checkout.scss
@@ -28,4 +28,19 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    padding: 16px;
+    text-align: center;
+    margin: 30px 0;
+    font-size: 20px;
+    color: red;
+    border: 1px solid red;
+    border-radius: 10px;
+
+    p {
+      margin: 10px 0 0 0;
+      font-weight: bold;
+    }
+  }
 }
