--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,24 @@ a {
   color: black;
 }
 
+.errorMessage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50vw;
+  padding: 1rem;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  border: 1px solid red;
+  border-radius: 10px;
+  background-color: rgba(255, 0, 0, 0.03)
+}
+
+.errorMessage span {
+  font-weight: bold;
+  font-size: 18px;
+}
+
 
  /* Estilos del spinner */
  .loader {
