--- a/src/components/CustomButton/customBtn.scss
+++ b/src/components/CustomButton/customBtn.scss
@@ -5,7 +5,6 @@
   height: 50px;
   min-width: 165px;
   letter-spacing: 0.5px;
-  line-height: 50px;
   padding: 0 35px 0 35px;
   font-size: 15px;
   background-color: black;
@@ -14,24 +13,26 @@
   font-family: 'Open Sans Condensed';
   font-weight: bolder;
   border: none;
-  cursor: pointer;
+  cursor: pointer;  
   
-  &--disabled {
-    padding: 0 35px 0 35px;
-    font-family: 'Open Sans Condensed';
-    font-size: 15px;
-    font-weight: bolder;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    line-height: 50px;
-    background-color: white;
-    border: 1px solid lightgray;
-  }
-
   &:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+
+  &--disabled {
+    padding: 0 20px 0 20px;
+    background-color: white;
+    color: grey;
+    border: 1px solid lightgray;
+    cursor: auto;
+    
+    &:hover {
+      color: grey;
+      background-color: white;
+      border: 1px solid lightgray;
+    }
   }
 
   &.google-sign-in {
