Estilos responsive del cartDropdown

--- a/src/components/CartDropdown/cartDropdown.scss
+++ b/src/components/CartDropdown/cartDropdown.scss
@@ -33,3 +33,29 @@
     margin-top: auto;
   }
 }
+
+@media screen and (max-width: 530px) {
+  .cart-dropdown {
+    top: 140px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .cart-dropdown--logged {
+    top: 180px;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .cart-dropdown {
+    top: 265px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .cart-dropdown--logged {
+    top: 310px;
+  }
+}
