--- a/src/components/CollectionItem/collectionItem.scss
+++ b/src/components/CollectionItem/collectionItem.scss
@@ -2,7 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 22vw;
+  // width: 22vw;
+  width: 100%;
   height: 350px;
   align-items: center;
 
@@ -40,6 +41,7 @@
     }
     .custom-button {
       display: flex;
+      align-items: center;
       opacity: 0.85;
     }
   }
@@ -56,8 +58,20 @@
       margin-bottom: 15px;
     }
 
-    .price {
-      width: 10%;
-    }
+    // .price {
+    //   width: 10%;
+    // }
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .collection-item {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .collection-item {
+    flex-basis: 100%;
   }
 }
