--- a/src/components/PreviewCollection/previewCollection.scss
+++ b/src/components/PreviewCollection/previewCollection.scss
@@ -8,8 +8,43 @@
     margin-bottom: 5px;
   }
 
+  a {
+    margin-bottom: 25px;
+  }
+
   .preview {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .collection-preview {
+    .collection-item:not(:last-of-type) {
+      margin-right: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .collection-preview {
+    .preview {
+      flex-wrap: wrap;
+
+      .collection-item {
+        padding: 10px;
+      }
+    }
+    .title, a {
+      margin-left: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .collection-preview {
+    a {
+      margin-bottom: 10px;
+    }
   }
 }
