Estilos responsive de la página SignInAndSignUp

--- a/src/components/SignIn/signIn.scss
+++ b/src/components/SignIn/signIn.scss
@@ -1,5 +1,5 @@
 .sign-in {
-  width: 380px;
+  width: 48%;
   display: flex;
   flex-direction: column;
 
@@ -11,4 +11,33 @@
 .buttons {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 800px) {
+  .sign-in {
+    width: 100%;
+    margin-bottom: 45px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .sign-in {
+
+    h2 {
+      margin-top: 0;
+    }
+
+    .group {
+      margin: 0;
+    }
+
+    button {
+      width: 100%;
+    }
+
+    button:first-of-type {
+      margin-bottom: 10px;
+    }
+  }
 }
