--- a/src/pages/SignInAndSignUp/SignInAndSignUp.scss
+++ b/src/pages/SignInAndSignUp/SignInAndSignUp.scss
@@ -1,6 +1,7 @@
 .sign-in-and-sign-up {
   display: flex;
   justify-content: space-between;
-  width: 850px;
+  flex-wrap: wrap;
+  width: 100%;
   margin: 30px auto;
 }
