El botón del item se muestra siempre para tamaños móviles

--- a/src/components/CollectionItem/collectionItem.scss
+++ b/src/components/CollectionItem/collectionItem.scss
@@ -67,6 +67,10 @@
 @media screen and (max-width: 950px) {
   .collection-item {
     flex-basis: 50%;
+
+    .custom-button {
+      display: flex;
+    }
   }
 }
 
