Actualización de firebase y node-sass, correcciones menores de estilos

--- a/src/components/CustomButton/customBtn.scss
+++ b/src/components/CustomButton/customBtn.scss
@@ -1,6 +1,7 @@
 .custom-button {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: auto;
   height: 50px;
   min-width: 165px;
